<resources>
    <string name="app_name">OptionsMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="check">Check?</string>
    <string name="go_next">Siguiente!</string>

    <string name="option_1">Primera opcion</string>
    <string name="option_2">Segunda opcion</string>
    <string name="option_3">Tercera opcion</string>


</resources>